Added User Profile files and folders

--- a/GeorgesRecipeRoomFullStack/appsettings.json
+++ b/GeorgesRecipeRoomFullStack/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FirebaseProjectId": "georgesreciperoom",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost\\SQLExpress;database=GeorgesRecipeRoomFullstack;integrated security=true"
+  }
+}
 }
