Updated register.js form

--- a/GeorgesRecipeRoomFullStack/appsettings.json
+++ b/GeorgesRecipeRoomFullStack/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "FirebaseProjectId": "georgesreciperoom",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost\\SQLExpress;database=GeorgesRecipeRoomFullstack;integrated security=true"
+    "DefaultConnection": "Server=localhost\\SQLExpress;Database=GeorgesRecipeRoom;Integrated Security=true"
   }
 }
 
